<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.github.unchuckable</groupId>
  <artifactId>jmush</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  
  <properties>
  	<maven.compiler.source>21</maven.compiler.source>
  	<maven.compiler.target>21</maven.compiler.target>
  	<maven.compiler.release>21</maven.compiler.release>

	<jacoco.version>0.8.12</jacoco.version>
	<junit.version>6.1.1</junit.version>
	<spotless.version>2.43.0</spotless.version>
  </properties>
  
  
  <dependencies>
  	<dependency>
  		<groupId>org.junit.jupiter</groupId>
  		<artifactId>junit-jupiter</artifactId>
  		<version>${junit.version}</version>
		<scope>test</scope>
  	</dependency>

  	<dependency>
  		<groupId>com.google.code.gson</groupId>
  		<artifactId>gson</artifactId>
  		<version>2.11.0</version>
  		<scope>test</scope>
  	</dependency>
  </dependencies>

  <build>
	  <plugins>
		<plugin>
			<groupId>org.jacoco</groupId>
			<artifactId>jacoco-maven-plugin</artifactId>
			<version>${jacoco.version}</version>
			<executions>
				<execution>
					<id>pre-unit-test</id>
					<goals>
						<goal>prepare-agent</goal>
					</goals>
				</execution>
				<execution>
					<id>post-unit-test</id>
					<phase>test</phase>
					<goals>
						<goal>report</goal>
					</goals>
				</execution>
			</executions>
		</plugin>
		<plugin>
			<groupId>com.diffplug.spotless</groupId>
			<artifactId>spotless-maven-plugin</artifactId>
			<version>${spotless.version}</version>
			<configuration>
				<java>
					<googleJavaFormat />
				</java>
			</configuration>
			<executions>
				<execution>
					<goals>
						<goal>check</goal>
					</goals>
				</execution>
			</executions>
		</plugin>
	  </plugins>
  </build>

</project>